# ha-nep-local

./: LICENSE  README.md  hacs.json  pyproject.toml  pytest.ini
.github/workflows/: validate.yml
custom_components/: __init__.py
custom_components/nep_local/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  exceptions.py  manifest.json  models.py  parsers.py  sensor.py  strings.json
custom_components/nep_local/translations/: en.json
nep_local/: __init__.py  client.py  exceptions.py  models.py  parsers.py
tests/: conftest.py  test_client.py  test_config_flow.py  test_coordinator.py  test_parsers.py  test_sensor.py
tests/fixtures/: aggregate.json  inventory.html  module_low_light.json
