[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nep-local-protocol"
version = "0.1.0"
description = "Local-only NEP gateway protocol primitives"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9"]

[tool.setuptools]
packages = ["nep_local"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
